# Sabiiro-Snapshot

./: .gitignore  LICENSE.md  README.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: additional.rs  main.rs
src-tauri/src/airplay/: error.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/discord/: error.rs  mod.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/rpc/: commands.rs  mod.rs  server.rs
src-tauri/src/steam/: callbacks.rs  mod.rs
src-tauri/src/systemtray/: mod.rs
src-tauri/src/vibrancy/: common.rs  mod.rs  windows.rs
src-tauri/src/ws/: mod.rs
